microservices-extra-kube-manifests/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: restaurant-app
spec:
  parentRefs:
  - name: frontend-gateway
    namespace: restaurant-app
  hostnames:
  - watika-gardenia.org
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend
      port: 80
